# canillita

./: .gitignore  README.md  canillita.db  configure.ac
src/: Makefile.am  base_de_datos_canillita.sql  canillita-base-de-datos.vala  canillita-liststore-revistas.vala  canillita-liststore-ventas.vala  canillita-revista-dao.vala  canillita-revista.vala  canillita-treeview-ventas.ui  canillita-treeview-ventas.vala  canillita.gresources.xml  canillita.ui  canillita.vala  revista-dao.vala  revista.vala
